fixed offscreen whitespace

--- a/app/assets/stylesheets/stylle.css.sass
+++ b/app/assets/stylesheets/stylle.css.sass
@@ -35,7 +35,7 @@ header
   margin: 0 auto
 
 .shoe
-  width: calc(100% - 40px)
+  width: 100%
   position: relative
   height: 420px
   padding: 10px 20px
@@ -50,19 +50,16 @@ header
   width: 100%
   position: absolute
   bottom: 0
+  left: 0
 
 .like, .dislike
   text-align: center
   margin: 15px 20px
 
-.like
-  left: -20px
-
 .like-active
   background-color: green
 
 .dislike
-  right: 20px
   float: right
 
 .improving
